fixed collapse panels + styles

--- a/themes/cwclan/styles.css
+++ b/themes/cwclan/styles.css
@@ -556,3 +556,9 @@ tbody td:hover {
     padding-bottom: 5px;    
     border-bottom: solid thin #ddd;
 }
+span .panelbutton {
+    position: relative;
+    float: right;
+    top: -21px;
+    right: 10px;
+}
